--- a/_posts/2015-06-07-cvpr.md
+++ b/_posts/2015-06-07-cvpr.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Towards force sensing from vision - observing hand-object interactions to infer manipulation forces
-subtitle: IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2015)
+subtitle: T.-H. Pham, A. Kheddar, A. Qammaz, A. A. Argyros, in IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2015)
 image: /img/papers/cvpr2015.jpg
 tags: [research]
 ---
@@ -12,11 +12,9 @@ We present a novel, non-intrusive approach for estimating contact forces during 
 
 [![YouTube](http://img.youtube.com/vi/mtWwkOJkeXM/0.jpg)](http://www.youtube.com/watch?v=mtWwkOJkeXM)
 
-### Links
+### Reference
 
 [[pdf](https://hal.archives-ouvertes.fr/hal-01356136/)], [[video](http://www.youtube.com/watch?v=mtWwkOJkeXM)]
-
-### Reference
 
 ~~~
 @inproceedings{cvpr:pham:2015,
