--- a/_posts/2015-12-11-oui.md
+++ b/_posts/2015-12-11-oui.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Capturing and reproducing hand-object interactions through vision-based force sensing
-subtitle: T.-H. Pham, A. Kheddar, A. Qammaz, A. A. Argyros, in IEEE ICCV Workshop on Object Understanding for Interaction (OUI 2015)
+subtitle: T.-H. Pham, A. Kheddar, A. Qammaz, A. A. Argyros, IEEE ICCV Workshop on Object Understanding for Interaction (OUI 2015)
 image: /img/papers/oui2015.jpg
 tags: [research]
 ---
