Use cropped ICRA image

--- a/_posts/2018-05-21-icra.md
+++ b/_posts/2018-05-21-icra.md
@@ -2,7 +2,7 @@
 layout: post
 title: OptLayer - practical constrained optimization for deep reinforcement learning in the real world
 subtitle: T.-H. Pham, G. De Magistris, R. Tachibana, IEEE International Conference on Robotics and Automation (ICRA), 2018 (to appear)
-image: /img/papers/icra2018.jpg
+image: /img/papers/icra2018_cropped.jpg
 tags: [research]
 ---
 
