Fix aspect ratio remaining images

--- a/_posts/2015-06-07-cvpr.md
+++ b/_posts/2015-06-07-cvpr.md
@@ -2,7 +2,7 @@
 layout: post
 title: Towards force sensing from vision - observing hand-object interactions to infer manipulation forces
 subtitle: T.-H. Pham, A. Kheddar, A. Qammaz, A. A. Argyros, IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2015)
-image: /img/papers/cvpr2015.jpg
+image: /img/papers/cvpr2015_cropped.jpg
 tags: [research]
 ---
 
