--- a/_posts/2017-10-23-tii.md
+++ b/_posts/2017-10-23-tii.md
@@ -2,7 +2,7 @@
 layout: post
 title: Multi-contact interaction force sensing from whole-body motion capture
 subtitle: T.-H. Pham, S. Caron, A. Kheddar, IEEE Transactions on Industrial Informatics (TII), 2017
-image: /img/papers/tii2017.jpg
+image: /img/papers/tii2017_cropped.jpg
 tags: [research]
 ---
 
