--- a/_posts/2016-12-13-sii.md
+++ b/_posts/2016-12-13-sii.md
@@ -2,7 +2,7 @@
 layout: post
 title: Whole-body contact force sensing from motion capture
 subtitle: T.-H. Pham, A. Bufort, S. Caron, A. Kheddar, "Whole-Body Contact Force Sensing From Motion Capture", in IEEE/SICE International Symposium on System Integration (SII 2016)
-image: /img/papers/sii2016.jpg
+image: /img/papers/sii2016_cropped.jpg
 tags: [research]
 ---
 
