--- a/_posts/2017-10-26-pami.md
+++ b/_posts/2017-10-26-pami.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hand-object contact force estimation from markerless visual tracking
 subtitle: T.-H. Pham, N. Kyriazis, A. A. Argyros, A. Kheddar, IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)
-image: /img/papers/pami2017.jpg
+image: /img/papers/pami2017_cropped.jpg
 tags: [research]
 ---
 
